--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/x-date-pickers": "^8.23.0",
     "dayjs": "^1.11.19",
     "next": "16.1.1",
+    "plotly.js": "^3.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-plotly.js": "^2.6.0",
     "react-select": "^5.10.2"
   },
   "devDependencies": {
